--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
         height: 100vh;
         font-family: Arial, sans-serif;
 
-        background-image: url('fond.jpg');
+        background-image: url('assets/fond.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
